--- a/contact.html
+++ b/contact.html
@@ -59,32 +59,25 @@
             </div>
 
         </nav>
-        <div class="content">
-            <div style="color:white;">
+        <div class="contact">
+            <div>
                 <h1>Nous Contacter</h1>
-                <p style="color:white;">Au fil des décennies, la liste des burgers McDo s’est étoffée, pour le plus grand plaisir des amateurs de nouvelles saveurs. Aujourd’hui, les burgers McDonald’s comblent toutes les faims et toutes les envies !</p>
+                <p>Au fil des décennies, la liste des burgers McDo s’est étoffée, pour le plus grand plaisir des amateurs de nouvelles saveurs. Aujourd’hui, les burgers McDonald’s comblent toutes les faims et toutes les envies !</p>
             </div>
-            <div class="row">
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Prénom</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Prénom">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Nom</label>
-                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Nom">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Sujet</label>
-                        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-                    </div>
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
+
+            <form>
+                <div class="form-group ">
+                    <input type="text " class="form-control " id="exampleInputEmail1 " aria-describedby="emailHelp " placeholder="Prénom ">
+                </div>
+                <div class="form-group ">
+                    <input type="text " class="form-control " id="exampleInputPassword1 " placeholder="Nom ">
+                </div>
+                <div class="form-group ">
+                    <textarea id="subject " name="subject " placeholder="Write something.. " style="height:170px "></textarea>
+                </div>
+                <button type="submit " class="btn btn-primary ">Submit</button>
+            </form>
+
 
         </div>
 
@@ -95,9 +88,9 @@
     </script>
 
 
-    <script src="./assets/scripts/animate_card.js"></script>
-    <script src="./assets/scripts/menu.js"></script>
-    <script src="./assets/scripts/audio_layers.js"></script>
+    <script src="./assets/scripts/animate_card.js "></script>
+    <script src="./assets/scripts/menu.js "></script>
+    <script src="./assets/scripts/audio_layers.js "></script>
 
 </body>
 
